[project]
name = "storb-rl-miner"
version = "0.0.1"
description = "Storb RL Subnet Miner CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "fiber @ git+https://github.com/storb-tech/fiber.git#egg=fiber[chain]",
    "metaworld>=3.0.0",
    "torch>=2.8.0"
]

[dependency-groups]
dev = ["debugpy>=1.8.9", "py-spy>=0.4.0", "pytest>=8.3.4", "ruff>=0.8.2"]
