[project]
name = "kinitro-agent"
version = "0.0.1"
description = "Kinitro Agent"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "metaworld>=3.0.0",
    "torch>=2.8.0"
]

[dependency-groups]
dev = ["debugpy>=1.8.9", "py-spy>=0.4.0", "pytest>=8.3.4", "ruff>=0.8.2"]
